--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>arabic-phq9-vue</title>
+    <title>إستبيان صحة المريض 9</title>
+    <link 
+  rel="stylesheet"
+  href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
+  integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If"
+  crossorigin="anonymous">
   </head>
   <body>
     <noscript>
