--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
     <noscript>
       <strong>We're sorry but arabic-phq9-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div class="container">
+      <div id="app"></div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
